--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,21 +13,13 @@ services:
   database:
     image: couchbase:community-7.6.1
     restart: on-failure
+    container_name: database
     ports:
       - "8091:8091"
       - "8092:8092"
       - "8093:8093"
       - "8094:8094"
       - "11210:11210"
-    environment:
-      - CLUSTER_USERNAME= Administrator
-      - CLUSTER_PASSWORD= 123456
-      - SERVICES= data,index,query,fts
-      - CLUSTER_NAME= todoapp
-      - BUCKET= todoapp
-      - COUCHBASE_BUCKET_RAMSIZE= 512
-      - COUCHBASE_RAM_SIZE=2048
-      - COUCHBASE_INDEX_RAM_SIZE=512
     volumes:
       - db-vol:/home/node/couchbase
     networks:
@@ -35,12 +27,12 @@ services:
 
   app:
     build: .
-    restart: on-failure
+    restart: always
     container_name: app
-    environment:
-      - COUCHBASE_HOST= database
     depends_on:
       - database
+    environment:
+      - COUCHBASE_HOST=database
     ports:
       - "8080:8080"
     volumes:
