--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
     <groupId>com.todoapp</groupId>
     <artifactId>todo-app</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0</version>
     <name>todo-app</name>
     <description>todo-app</description>
 
